@@ -47,6 +47,7 @@ import junit.framework.TestCase;
  * @author Eamonn McManus
  */
 
+
 public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase {
 
   /*
@@ -110,7 +111,8 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
 
     // Now make a parallel FRQ and an associated FinalizableWeakReference to an object, in order to
     // exercise some classes from the parallel ClassLoader.
-    AtomicReference<Object> sepFrqA = new AtomicReference<Object>(sepFrqC.newInstance());
+    AtomicReference<Object> sepFrqA =
+        new AtomicReference<Object>(sepFrqC.getDeclaredConstructor().newInstance());
     Class<?> sepFwrC = sepLoader.loadClass(MyFinalizableWeakReference.class.getName());
     Constructor<?> sepFwrCons = sepFwrC.getConstructor(Object.class, sepFrqC);
     // The object that we will wrap in FinalizableWeakReference is a Stopwatch.
@@ -240,7 +242,7 @@ public class FinalizableReferenceQueueClassLoaderUnloadingTest extends TestCase 
     assertNotSame(frqUserC, sepFrqUserC);
     assertSame(sepLoader, sepFrqUserC.getClassLoader());
 
-    Callable<?> sepFrqUser = (Callable<?>) sepFrqUserC.newInstance();
+    Callable<?> sepFrqUser = (Callable<?>) sepFrqUserC.getDeclaredConstructor().newInstance();
     WeakReference<?> finalizableWeakReference = (WeakReference<?>) sepFrqUser.call();
 
     GcFinalization.awaitClear(finalizableWeakReference);
