@@ -39,7 +39,7 @@ import junit.framework.TestSuite;
  * </ul>
  *
  * To force selection of our fallback strategies we load {@link AbstractFuture} (and all of {@code
- * com.google.common.util.concurrent} in degenerate class loaders which make certain platform
+ * com.google.common.util.concurrent}) in degenerate class loaders which make certain platform
  * classes unavailable. Then we construct a test suite so we can run the normal AbstractFutureTest
  * test methods in these degenerate classloaders.
  */
@@ -107,7 +107,7 @@ public class AbstractFutureFallbackAtomicHelperTest extends TestCase {
 
   private void runTestMethod(ClassLoader classLoader) throws Exception {
     Class<?> test = classLoader.loadClass(AbstractFutureTest.class.getName());
-    test.getMethod(getName()).invoke(test.newInstance());
+    test.getMethod(getName()).invoke(test.getDeclaredConstructor().newInstance());
   }
 
   private void checkHelperVersion(ClassLoader classLoader, String expectedHelperClassName)
